--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Prework # 2 avengers object.</title>
-  <script type"text/javascript" src="script.js"></script>
+  <script type"text/javascript" src="ObjectAssessment.js"></script>
 </head>
 <body>
 
