--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <script type"text/javascript" src="ObjectAssessment.js"></script>
 </head>
 <body>
-
+<p id="avengersAssemble">post object here</p>
 </body>
 </html>
